# MIPCandy

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  README_zh.md  benchmark.py  pyproject.toml  transforms.py  unet.py  volume_viewer.py
benchmark/: __main__.py  data.py  prototype.py  training.py  transforms.py  unet.py
docs/: README.md  api.md  getting-started.md  tutorial.md
home/: app.js  index.html
mip_candy/: __init__.py  evaluation.py  inference.py  sliding_window.py  training.py
mip_candy/common/: __init__.py
mip_candy/common/module/: __init__.py  conv.py  preprocess.py
mip_candy/common/optim/: __init__.py  loss.py
mip_candy/data/: __init__.py  dataset.py  io.py  visualization.py
mip_candy/frontend/: __init__.py  notion_fe.py  prototype.py  wandb_fe.py
mip_candy/preset/: __init__.py  segmentation.py
mipcandy/: __init__.py  config.py  inference.py  layer.py  metrics.py  profiler.py  sanity_check.py  settings.yml  sliding_window.py  training.py  transform.py  types.py
mipcandy/common/module/: __init__.py  preprocess.py
mipcandy/common/numpy/: __init__.py  regressions.py
mipcandy/common/optim/: __init__.py  loss.py  lr_scheduler.py
mipcandy/data/: __init__.py  convertion.py  dataset.py  download.py  geometric.py  inspection.py  io.py  patch_loader.py  patch_sampling.py  sliding_window.py  transform.py  visualization.py
mipcandy/frontend/: __init__.py  notion_fe.py  prototype.py  wandb_fe.py
mipcandy/presets/: __init__.py  segmentation.py
